<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/about"
        android:orientation="vertical"
        android:tileMode="repeat">

        <TextView
            android:id="@+id/textView"
            android:layout_width="342dp"
            android:layout_height="94dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="148dp"
            android:focusableInTouchMode="true"
            android:text="@string/Purpose"
            android:textColor="#DAA02D"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="335dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="118dp"
            android:text="@string/Author"
            android:textColor="#DAA02D"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="329dp"
            android:layout_height="26dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="240dp"
            android:layout_marginEnd="66dp"
            android:text="@string/Dateofconception"
            android:textColor="#DAA02D"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="266dp"
            android:text="@string/Instructions"
            android:textColor="#DAA02D"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="161dp"
            android:layout_marginTop="1182dp"
            android:text="Button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>